--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@
         <div class="container">
             <h2 class="section-title">The Mission</h2>
             <p class="section-subtitle">
-                Building the knowledge infrastructure for conscious crew members operating Spaceship Earth
+                Building the knowledge infrastructure for conscious crew members operating Spaceship Earth v2.0
             </p>
 
             <div class="philosophy-card">
@@ -1127,7 +1127,7 @@
                     <div class="icon">🔧</div>
                     <h3>Technology Toolkit</h3>
                     <p>
-                        Leverage modern technology—AI, blockchain, data science—as infrastructure 
+                        Leverage modern technology—AI, blockchain, cybersecurity, data science—as infrastructure 
                         for abundance rather than instruments of control.
                     </p>
                 </div>
@@ -1135,8 +1135,8 @@
                     <div class="icon">🤝</div>
                     <h3>Implementation Pathways</h3>
                     <p>
-                        Practical strategies for bootstrapping crew consciousness in your community, 
-                        organization, or life with clear, actionable steps.
+                        Practical strategies for bootstrapping crew consciousness in your life, community, 
+                        or organization with clear, actionable guidance.
                     </p>
                 </div>
             </div>
@@ -1149,7 +1149,7 @@
             <h2 class="section-title">The Implementation Guide</h2>
             <p class="section-subtitle">
                 18 chapters across 6 parts, appendices and front matter, providing a complete framework from understanding the 
-                current extraction system to achieving planetary abundance coordination
+                current extraction systems to achieving comprehensive planetary abundance
             </p>
 
             <div class="parts-container">
@@ -1380,7 +1380,7 @@
         <div class="container">
             <h2 class="section-title">Support the Mission</h2>
             <p class="section-subtitle">
-                Help activate crew consciousness and build abundance infrastructure for all
+                Help activate crew consciousness and build abundance infrastructure
             </p>
             <div class="support-content">
                 <div class="support-card">
@@ -1398,7 +1398,7 @@
                 <p style="margin-top: 2rem; opacity: 0.95; font-size: 1.1rem;">
                     All funds support open-source development, community building, and making this 
                     knowledge freely accessible to crew members worldwide. We're building abundance 
-                    infrastructure—starting with information itself.
+                    infrastructure—starting with information resouces.
                 </p>
             </div>
         </div>
@@ -1632,6 +1632,7 @@
 </body>
 
 </html>
+
 
 
 
