--- a/index.html
+++ b/index.html
@@ -1176,8 +1176,8 @@
                             <p class="chapter-description">Working with AI is the new synergy.</p>
                         </a>
                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Prologue.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">PRO</div>
-                            <div class="chapter-title">PROLOGUE</div>
+                            <div class="chapter-number">PROLGUE</div>
+                            <div class="chapter-title">A Day in 2050</div>
                             <p class="chapter-description">We stand at an unprecedented technological convergence.</p>
                         </a>
                     </div>
@@ -1645,6 +1645,7 @@
 </body>
 
 </html>
+
 
 
 
