--- a/index.html
+++ b/index.html
@@ -1148,8 +1148,8 @@
         <div class="container">
             <h2 class="section-title">The Implementation Guide</h2>
             <p class="section-subtitle">
-                18 chapters across 6 parts, appendices and front matter, providing a complete framework from understanding the 
-                current extraction systems to achieving comprehensive planetary abundance
+                SPACESHIP EARTH v2.0 An Implementation Guide covers 18 chapters across 6 parts, with appendices and front matter, providing a complete framework for understanding the 
+                current extraction systems to achieving comprehensive planetary abundance. Available for FREE for all.
             </p>
 
             <div class="parts-container">
@@ -1645,6 +1645,7 @@
 </body>
 
 </html>
+
 
 
 
