--- a/index.html
+++ b/index.html
@@ -1448,6 +1448,12 @@
         </div>
     </section>
                 <!-- Contact Information -->
+    <section id="connect" class="connect">
+        <div class="container">
+            <h2 class="section-title">Connect</h2>
+            <p class="section-subtitle">
+                Connect with us, coordinate with us, and be part of our crew.
+            </p>
                 <div class="contact-info-wrapper">
                     <h3 class="contact-heading">Coordination Channels</h3>
                     
@@ -1645,6 +1651,7 @@
 </body>
 
 </html>
+
 
 
 
