--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@
         <div class="container">
             <h2 class="section-title">Connect</h2>
             <p class="section-subtitle">
-                Connect with us, coordinate with us, and be part of our crew.
+                Connect with us, coordinate with us, and join a crew.
             </p>
                 <div class="contact-info-wrapper">
                     <div class="contact-info-card">
@@ -1606,3 +1606,4 @@
 </body>
 
 </html>
+
