--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <a href="https://archive.org/details/spaceship-earth-v-2.0-an-implementation-guide" target="_blank" class="crew-badge">🌍 Full PDF Version Available Here</a>
+            <a href="https://archive.org/details/spaceship-earth-v-2.0-an-implementation-guide" target="_blank" class="crew-badge">🌍 PDF Available Here</a>
             <h1>Spaceship Earth v2.0</h1>
             <p class="crew-message">You are crew. You are conscious. You are capable.</p>
             <p class="description">
