--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
         <div class="hero-content">
             <a href="https://archive.org/details/spaceship-earth-v-2.0-an-implementation-guide" target="_blank" class="crew-badge">🌍 PDF Available Here</a>
             <h1>Spaceship Earth v2.0</h1>
-            <p class="crew-message">You are crew. You are conscious. You are capable.</p>
+            <p class="crew-message">You are conscious. You are capable. You are crew.</p>
             <p class="description">
                 A comprehensive implementation guide for transitioning from passive passenger 
                 to crew consciousness. Designed to help individuals, communities, and organizations  
@@ -1504,7 +1504,7 @@
                 <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             </p>
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
-                <strong>You are crew. You are conscious. You are capable.</strong>
+                <strong>You are conscious. You are capable. You are crew.</strong>
             </p>
             <p>&copy; 2025 Noah O. Bodhi - Licensed under CC BY-SA 4.0</p>
             <p style="margin-top: 1rem; font-size: 0.95rem;">
@@ -1604,5 +1604,6 @@
 </body>
 
 </html>
+
 
 
