Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,7 @@
                             <div class="chapter-title">Appendix D</div>
                             <p class="chapter-description">Case Studies</p>
                         </a>
-                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/appendices/X%20-%20APPENDIX%20C%20Technical%20Reference.md" target="_blank" class="chapter-card">
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/appendices/X%20-%20APPENDIX%20E%20Economic%20Foundations%20for%20the%20CARE$.md" target="_blank" class="chapter-card">
                             <div class="chapter-number">E</div>
                             <div class="chapter-title">Appendix E</div>
                             <p class="chapter-description">Economic Foundations for the CARE$ Alternative Currency Model</p>
@@ -1604,6 +1604,7 @@
 </body>
 
 </html>
+
 
 
 
